manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: flufikdocs
    app.kubernetes.io/name: flufikdocs
  name: flufikdocs-svc
  namespace: flufik-docs
spec:
  ports:
    - name: flufikdocs
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: flufikdocs
    app.kubernetes.io/name: flufikdocs
  sessionAffinity: None
  type: ClusterIP
